# Distributed-GPS-Route-Tracking-System

./: README.md  docker-compose.yml  elixir_dependencies_fix.sh
dashboard/: mix.exs
dashboard/config/: config.exs  dev.exs  test.exs
dashboard/lib/dashboard_web/: endpoint.ex
data_ingestion_microservice/: .gitignore  Cargo.toml  Makefile  README.md  env.example  mix.exs
data_ingestion_microservice/lib/: data_ingestion_microservice.ex
data_ingestion_microservice/lib/data_ingestion_microservice/: application.ex  mqtt_handler.ex
data_ingestion_microservice/src/: config.rs  main.rs  route_simplification.rs  types.rs
data_ingestion_microservice_elixir/: README.md  mix.exs
data_ingestion_microservice_elixir/lib/data_ingestion_microservice/: application.ex  mqtt_handler.ex
data_ingestion_microservice_elixir/test/: data_ingestion_microservice_test.exs
data_ingestion_microservice_golang/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.go  env.example  go.mod  go.sum  main.go  main_test.go
data_ingestion_microservice_golang/algorithm/: simplification.go  simplification_test.go
data_ingestion_microservice_golang/config/: config.go
data_ingestion_microservice_golang/database/: connections.go
data_ingestion_microservice_golang/service/: ingestion_service.go
data_ingestion_microservice_golang/types/: types.go
data_ingestion_microservice_rust_old/: Cargo.toml  Makefile
data_ingestion_microservice_rust_old/src/: main.rs
db/: populate.py
simulation/: run.sh  simulate_buses.py
