[package]
name = "data_ingestion_microservice"
version = "0.1.0"
edition = "2021"
authors = ["Juan Manuel Young <Youngermaster>"]

[dependencies]
futures = "0.3.28"
geo = "0.29.3"
log = "0.4"
mongodb= "3.2.1"
pretty_env_logger = "0.4"
redis = { version = "0.29.0", features = ["aio", "tokio-comp"] }
rumqttc = "0.24.0"
serde = "1.0.188"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }